# chiz.work.gd-iam

./: .env.template  .env.template   .gitignore  Dockerfile  Dockerfile.builder  Jenkinsfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_07_08_1724-3c584f287dc5_initial.py  2025_07_08_2256-fc3c37a12eb2_initial.py  2025_07_08_2309-3eb8b5707f1a_initial.py  2025_07_09_1432-7364ab1fcc7f_.py  2025_07_12_1103-8c43c31aa33a_.py  2025_07_12_1951-504b1edadbef_user.py  2025_07_14_2104-c0df581faed4_user.py  2025_07_16_1748-463d71de49ae_user.py  2025_07_16_1851-ef5491900e37_user.py  353bfea5056d_init.py
app/: config.py  database.py  exceptions.py  main.py  models.py
app/api/: __init__.py  api_v1_router.py
app/auth/: __init__.py  auth.py  auth_manager.py  router.py  token_jwt.py
app/database/: __init__.py  _base_model.py  _db_main.py  _db_master.py  base_model.py  base_registry.py  db_master.py  model_alembic_connector.py  models_registry.py
app/routers/: __init__.py  auth_router.py  user_router.py
app/services/auth/: __init__.py  auth_manager.py  auth_service.py  crud.py  exceptions.py  schema.py
app/services/auth/.keys copy/: jwt-private.pem  jwt-public.pem
app/services/user/: __init__.py  crud.py  exceptions.py  schema.py
app/user/: __init__.py  crud.py  exceptions.py  external_deps.py  models.py  router.py  schema.py
dev_notes/: _git.md  auth_api.md  command_log.md  commit_remind.txt  structure.md  tz.md
frontend/: index.html
frontend/assets/: index-CcNm-hJB.css  index-CzbBfYsj.css  index-D_t0f0wY.js  index-MTvAxz05.js
scripts/: build.sh  cleanup.sh  private_registry_push.sh  readme.md  run.sh
tests/: api_to_database_connection_helth_test.py  conftest.py  reading_config_test.py  user_api_test.py
