[project]
name = "iam-service-http-imqp"
version = "0.0.1a"
description = "IAM service over HTTP and AMQP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Основные зависимости приложения
    "fastapi[standard]",
    "uvicorn[standard]",
    "gunicorn",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "bcrypt==5.0.0",
    "orjson",
    "pydantic-settings",
    "pyjwt[crypto]",
    "alembic",
]

[dependency-groups]
dev = [
    # Инструменты разработки
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
norecursedirs = ["pgdata"]
